# Codec2Demo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/renovation/codec2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/codec2/: CMakeLists.txt  codebook.c  codebookd.c  codebookge.c  codebookjvm.c  codebooklspmelvq.c  codebookmel.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c  freedv_api.c
app/src/main/cpp/codec3/: CMakeLists.txt  nat-lib3.cpp
app/src/main/java/com/renovation/codec2/: MainActivity.java
app/src/test/java/com/renovation/codec2/: ExampleUnitTest.java
